tests/run/out/palindrome_detector_2tapes_100A1A001_verbose.txt
Input: 100A1A001
==================== ERR ====================
error: Symbol "A" in input is not defined in the set of input symbols
Input: 100A1A001
          ^
==================== END ====================
